--- a/docs/HazardAnalysis/HazardAnalysis.tex
+++ b/docs/HazardAnalysis/HazardAnalysis.tex
@@ -97,15 +97,16 @@
 
     %
     \multirow{-8}{*}{\centering\rotatebox[origin=c]{90}{Error Handler}}
-                              & Device not starting      & \begin{minipage}[t]{\linewidth}
+                              & Errors are strange or incomplete      & \begin{minipage}[t]{\linewidth}
                                                                \begin{itemize}[nosep, wide=0pt, leftmargin=*, after=\strut]
-            \item Device is faulty
-            \item Battery has died
+            \item Stack overflow
+            \item Memory leak
+	\item Error previously unaccounted for
         \end{itemize}
-                                                           \end{minipage}                             & Device not turned on, thus no monitoring                                                                   & Battery dead logo appears when turning on the device & \begin{minipage}[t]{\linewidth}
+                                                           \end{minipage}                             & Persons responsible for responding to errors will be unable to daignose and address the underlying issue                                                                   & Error comes in unexpected form, or strange & \begin{minipage}[t]{\linewidth}
                                                                                                                                                                                                                                                                                 \begin{itemize}[nosep, wide=0pt, leftmargin=*, after=\strut]
-            \item Charge the device
-            \item Change batteries if needed
+            \item Use different channels to handle device logic and error handling
+            \item Ensure that strange errors either return as Optional or Empty List (i.e. any value but null)
         \end{itemize}
                                                                                                                                                                                                                                                                             \end{minipage}  \tabularnewline\cline{1-6}
 \end{tabular}%\vspace{3mm}
